# sql-query-injection-scanner

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  GETTING_STARTED.md  INSTRUCTIONS.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.md  example_usage.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build-test-publish.yml
sql_injection_scanner/: __init__.py  cli.py  scanner.py
tests/: __init__.py
