[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-injection-scanner"
version = "1.0.3"
description = "A comprehensive scanner for detecting SQL injection vulnerabilities in Python code"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "PioManojDatt", email = "contact@PioManojDatt.com"},
]
keywords = ["sql-injection", "security", "scanner", "vulnerability", "detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

dependencies = [
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "twine>=3.4.0",
    "build>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/PioManojDatt/sql-query-injection-scanner"
Documentation = "https://github.com/PioManojDatt/sql-query-injection-scanner/blob/main/README.md"
"Bug Tracker" = "https://github.com/PioManojDatt/sql-query-injection-scanner/issues"
"Source Code" = "https://github.com/PioManojDatt/sql-query-injection-scanner"

[project.scripts]
sql-injection-scanner = "sql_injection_scanner.cli:main"

[tool.setuptools]
packages = ["sql_injection_scanner"]

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--strict-markers"

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
