[metadata]
name = sql-injection-scanner
version = 1.0.1
author = PioManojDatt
author_email = contact@PioManojDatt.com
description = A comprehensive scanner for detecting SQL injection vulnerabilities in Python code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PioManojDatt/sql-query-injection-scanner
project_urls =
    Bug Tracker = https://github.com/PioManojDatt/sql-query-injection-scanner/issues
    Documentation = https://github.com/PioManojDatt/sql-query-injection-scanner/blob/main/README.md
    Source Code = https://github.com/PioManojDatt/sql-query-injection-scanner
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities
keywords = sql-injection security scanner vulnerability detection
license = MIT

[options]
packages = find:
python_requires = >=3.6
install_requires =
    openpyxl>=3.0.0

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    sql-injection-scanner = sql_injection_scanner.cli:main

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.12.0
    black>=21.0
    flake8>=3.9.0
    mypy>=0.910
    twine>=3.4.0
    build>=0.7.0

[bdist_wheel]
universal = 0
